--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,9 +1,10 @@
 CC = gcc
 LD = ld
 
-CFLAGS = -mno-red-zone -fno-stack-protector -fno-pic -fno-pie \
-         -O0 -fcf-protection=none \
-		 -c -m64 -march=x86-64 -mtune=generic
+CFLAGS = -mno-red-zone -fno-stack-protector \
+         -O2 -fcf-protection=none -nostdlib -nostartfiles -static \
+         -ffreestanding -mcmodel=large \
+         -c -m64 -march=x86-64 -mtune=generic
 LDFLAGS = -n -T linker.ld -e _start
 
 # Directories
@@ -52,4 +53,3 @@ $(FINAL_LIBDIR)/%.elf: $(LOCAL_BUILDDIR)/%.elf
 clean:
 	rm -rf $(LOCAL_BUILDDIR)
 	rm -rf $(FINAL_LIBDIR)
-	$(MAKE) -C fat_driver clean
