--- a/os/kernel/startup/startlist.cfg
+++ b/os/kernel/startup/startlist.cfg
@@ -1,3 +1,3 @@
-/MODULES/APPS/TEST.ELF ULTRA
-/MODULES/APPS/TEST1.ELF BACKGROUND
-/MODULES/APPS/TEST2.ELF ULTRA
+#/MODULES/APPS/TEST.ELF ULTRA
+#/MODULES/APPS/TEST1.ELF BACKGROUND
+#/MODULES/APPS/TEST2.ELF ULTRA
